<resources>
    <string name="app_name">ChoreChampion</string>

    <!-- Button Strings -->
    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="create_button">Create</string>
    <string name="edit_button">Edit</string>
    <string name="add_button">Add</string>
    <string name="onward_button">Onward!</string>
    <string name="delete_button">Delete</string>
    <string name="done_button">Done</string>
    <string name="save_button">Save</string>
    <string name="back_button">Back</string>
    <string name="select_button">Select!</string>
    <string name="add_child">Add child account</string>
    <string name="edit_child">Edit child account</string>
    <string name="edit_avatar">Edit Avatar</string>
    <string name="exit_button">Exit to parent mode</string>
    <string name="save_name">Save Name</string>
    <string name="save_pin">Save PIN</string>

    <!-- Nav Bar Buttons -->
    <string name="inventory_nav">Inventory</string>
    <string name="quests_nav">Quests</string>
    <string name="home_nav">Home</string>
    <string name="shop_nav">Shop</string>
    <string name="settings_nav">Settings</string>

    <!-- Login/Signup -->
    <string name="login_title">-- Log In --</string>
    <string name="email_msg">Enter email here</string>
    <string name="password_msg">Enter password here</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login_option">-- Log In With --</string>
    <string name="google_login_desc">Google login</string>

    <string name="create_title">-- Create Account --</string>
    <string name="create_displayName">Enter parent username</string>
    <string name="create_email">Enter your email address</string>
    <string name="create_password">Create a password (min 6 characters)</string>
    <string name="confirm_password">Confirm password</string>
    <string name="create_pin">Create security PIN (4 digit)</string>
    <string name="signup_option">-- Sign Up With --</string>
    <string name="google_signup_desc">Google signup</string>

    <string name="google_pin_msg">To sign up with Google, just create your PIN above first!</string>

    <!-- Parent Home -->
    <string name="champions_hall_title">Champions Hall</string>
    <string name="welcome_text">Welcome!,  </string>
    <string name="your_knights">Your Knights:</string>
    <string name="add_child_button">Add child account</string>
    <string name="edit_child_button">Edit child account</string>
    <string name="username_placeholder">Username</string>
    <string name="knight_name_placeholder">Knight Name</string>

    <!-- Parent Quests -->
    <string name="quests_title">Quests</string>
    <string name="quests_msg">Select to edit/delete quest.</string>

    <string name="quest_name_example">Quest Name</string>
    <string name="quest_desc_example">Quest Description</string>
    <string name="assigned_to_example">Assigned to here</string>
    <string name="gold_example">200 G</string>
    <string name="quest_assign_message">Assign tasks and rewards for your champions</string>
    <string name="quest_create_title">Create A Quest</string>
    <string name="deploy_btn">Deploy</string>
    <string name="cancel_btn">Cancel</string>
    <string name="modify_quest_msg">Adjust values for this objective</string>
    <string name="modify_quest_title">Modify Quest</string>

    <string name="active_quests">Active Quests</string>
    <string name="completed_quests">Need Approved</string>

    <!-- Parent Shop -->
    <string name="shop_title">Shop</string>
    <string name="shop_msg">Select to delete from Shop.</string>

    <string name="shop_item_example">Shop item</string>
    <string name="bought_by">Bought By:</string>
    <string name="bought_by_example">Child here</string>

    <string name="shop_item_title_default">Shop Item</string>
    <string name="shop_item_cost">100 G</string>
    <string name="shop_item_desc_default">Shop item description goes here.</string>

    <string name="stock_btn">Stock</string>
    <string name="gold_cost_label">Gold Cost</string>
    <string name="shop_item_description">Description</string>
    <string name="shop_item_title">Item Title (ex. Extra Hour Screen Time)</string>
    <string name="add_rewards_subtitle">Add unique rewards and items to the shop</string>
    <string name="add_rewards_title">Add Shop Item</string>
    <string name="modify_reward_title">Modify Shop Item</string>
    <string name="modify_reward_subtitle">Make changes to shop item</string>

    <!-- Parent Create Child Profile -->
    <string name="create_profile_title">Create Child Profile</string>
    <string name="profile_edit_text_hint">Enter child username</string>
    <string name="profile_consent_msg">
        By creating a child profile, you confirm you are the parent or guardian and consent to storing this child\'s username and avatar. You may delete this profile at any time in \"Edit\" in your Home screen.
    </string>

    <!-- Inventory -->
    <string name="inventory_title">Inventory</string>
    <string name="inventory_msg">AFTER reward is given to your knight, long press to remove item from their inventory!</string>

    <!-- Settings -->
    <string name="settings_title">Settings</string>
    <string name="edit_display_name">Edit display name</string>
    <string name="edit_pin">Edit PIN</string>
    <string name="adjust_music">Adjust Music Volume:</string>
    <string name="edit_child_profile">Edit child account:</string>
    <string name="edit_username">Edit username</string>
    <string name="delete_account_button">Delete child account</string>
    <string name="log_out_button">Log out</string>
    <string name="coppa_link">https://www.ftc.gov/legal-library/browse/rules/childrens-online-privacy-protection-rule-coppa</string>
    <string name="music_credit">Theme music credit: Medieval Theme by Maarten Schellekens via FreeMusicArchive</string>
    <string name="coppa_title">COPPA Link:</string>
    <string name="music_credit_title">Music Credit:</string>
    <string name="notifications_on_off">Notifications On/Off</string>

    <!-- Notifications -->
    <string name="notifications_title">Kingdom Logs</string>
    <string name="notifs_subtitle">Swipe left of right to clear single alerts</string>
    <string name="empty_notifs">All quiet in the realm!\nNo active notifications.</string>
    <string name="clear_button">Clear All</string>
    <string name="exit_notifs">Close</string>
    <string name="default_username_notifs">childUsername</string>
    <string name="default_quest_notifs">Completed Quest: Clean bedroom</string>
    <string name="notification_type">Notification Type</string>

    <!-- Child Home -->
    <string name="username_label">Username</string>
    <string name="gold_label">Gold: 500</string>
    <string name="xp_label">XP: 900</string>

    <string name="level_default">Level 1</string>

    <!-- Child Quests -->
    <string name="select_msg">Select to choose quest!</string>
    <string name="mark_done_msg">Click star to mark done!</string>
    <string name="my_quests">My Quests</string>
    <string name="quest_board">Quest Board</string>

    <!-- Child Shop -->
    <string name="current_gold_default">Current Gold: 500</string>
    <string name="buy_button">Buy!</string>

    <!-- Avatar Selection -->
    <string name="avatar_selection_title">Choose an avatar!</string>
    <string name="drop_down_default">Choose class</string>
    <string name="icon_credit">Avatar images made by Freepik from www.flaticon.com</string>

    <!-- PIN -->
    <string name="pin_title">Enter PIN to exit</string>
    <string name="enter_btn">Enter PIN</string>

    <!-- Quest Item -->
    <string name="quest_title_default">Quest Title</string>
    <string name="quest_gold_amount_default">50</string>
    <string name="gold">G</string>
    <string name="quest_description_default">Quest description goes here</string>
    <string name="quest_assignment_default">Assigned to: test</string>

    <!-- Quest Dialog -->
    <string name="dialog_title">Quest Title (ex. Wash the dishes)</string>
    <string name="dialog_description">Quest Description (Instructions)</string>
    <string name="dialog_gold">Gold Reward Amount</string>
    <string name="dialog_assign">Assign to Champion:</string>

    <!-- Image Descriptions -->
    <string name="logo_desc">Logo</string>
    <string name="home_desc">home image</string>
    <string name="avatar_desc">knight avatar</string>
    <string name="quests_desc">quests image</string>
    <string name="shop_desc">Shop image</string>
    <string name="profile_desc">Create Profile image</string>
    <string name="inventory_desc">Inventory background</string>
    <string name="settings_desc">Settings background</string>
    <string name="avatar_background_desc">Avatar Selection background</string>
    <string name="pin_background_desc">PIN background</string>

    <!-- Nav Image Descriptions -->
    <string name="inventory_nav_desc">Inventory</string>
    <string name="quests_nav_desc">Quests</string>
    <string name="home_nav_desc">Home</string>
    <string name="shop_nav_desc">Shop</string>
    <string name="settings_nav_desc">Settings</string>
    <string name="quest_board_guide">Quest Board Guide</string>
    <string name="info_message_default">Complete quests to fill your vault with 🪙! Once you save up enough gold, head over to the Shop to claim epic rewards.</string>
    <string name="got_it_btn_text">Got It!</string>


    <string name="how_quests_work">How Do Quests Work?</string>
    <string name="how_to_accept_quest">Choose A Quest:</string>
    <string name="click_quest_board_tab">Click Quest Board Tab!</string>
    <string name="select_quest">Select a quest!</string>
    <string name="press_accept_quest">Press Accept button!</string>
    <string name="how_to_turn_in_quest">Turn In A Quest:</string>
    <string name="click_my_quests">Click My Quests Tab!</string>
    <string name="turn_in_quest">Press Turn In button!</string>
    <string name="awesome">Awesome!</string>

    <string name="how_does_the_shop_work">How Does The Shop Work?</string>
    <string name="buying_your_reward">Buying from the Shop:</string>
    <string name="select_item">Select item you want to buy!</string>
    <string name="click_buy_btn">Click Buy button!</string>

    <!-- Misc -->
    <string name="congrats_title">Congratulations!</string>
    <string name="rewards_gold">+100 G</string>

    <string name="purchase_made">Purchase Complete!</string>
    <string name="enjoy_text">Enjoy!</string>
    <string name="thank_you_btn">Thank you!</string>



</resources>