<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <ImageView
        android:id="@+id/child_home_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/home_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/castle_new"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="@dimen/bottom_nav_height"
        android:padding="16dp">


        <TextView
            android:id="@+id/child_home_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/champions_hall_title"
            android:fontFamily="@font/irishgrover_regular"
            android:textSize="42sp"
            android:textColor="@color/white"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="24dp"
            app:cardElevation="16dp"
            app:strokeColor="#40FFFFFF"
            app:strokeWidth="2dp"
            app:cardBackgroundColor="@color/glassWhite">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_gravity="center"
                android:padding="16dp">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/ic_placeholder_user"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:contentDescription="@string/avatar_desc"/>

                <TextView
                    android:id="@+id/username_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/username_label"
                    android:fontFamily="@font/macondo"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="16dp"/>

                <TextView
                    android:id="@+id/gold_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/gold_label"
                    android:fontFamily="@font/macondo"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>

                <TextView
                    android:id="@+id/xp_label"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/xp_label"
                    android:fontFamily="@font/macondo"
                    android:textSize="24sp"
                    android:textColor="@color/black"
                    android:textStyle="bold"
                    android:layout_marginTop="8dp"/>


                <com.google.android.material.button.MaterialButton
                    android:id="@+id/edit_avatar_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    app:cornerRadius="4dp"
                    android:text="@string/edit_avatar"
                    android:fontFamily="@font/macondo"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:backgroundTint="@color/forest_green"/>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/exit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="24dp"
            android:text="@string/exit_button"
            android:textSize="16sp"
            app:cornerRadius="4dp"
            android:textStyle="bold"
            android:fontFamily="@font/macondo"
            android:backgroundTint="@color/red"/>
    </LinearLayout>

</FrameLayout>