<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fillViewport="true">

    <ImageView
        android:id="@+id/child_quests_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/quests_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/quest_new"
        tools:ignore="ImageContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:paddingBottom="@dimen/bottom_nav_height"
        android:padding="16dp">

        <TextView
            android:id="@+id/quests_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quests_title"
            android:fontFamily="@font/irishgrover_regular"
            android:textSize="36sp"
            android:textColor="@color/black"/>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardUseCompatPadding="true"
            app:cardCornerRadius="24dp"
            app:cardElevation="16dp"
            app:strokeColor="#40FFFFFF"
            app:strokeWidth="2dp"
            app:cardBackgroundColor="@color/glassWhite">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/child_quest_grid"
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:padding="16dp"
                android:clipToPadding="false"/>

        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_msg"
            android:fontFamily="@font/macondo"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mark_done_msg"
            android:fontFamily="@font/macondo"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/white"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/select_quests_btn"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:backgroundTint="@color/new_blue"
            android:fontFamily="@font/macondo"
            android:text="@string/onward_button"
            android:textColor="@color/white"
            app:cornerRadius="4dp"
            android:textSize="24sp"
            android:textStyle="bold" />

    </LinearLayout>


</FrameLayout>