<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/castle_wall"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:padding="24dp" >

        <ImageView
            android:id="@+id/app_logo"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:contentDescription="@string/logo_desc"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/title_logo" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login_btn_initial"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="30dp"
            android:backgroundTint="@color/red"
            android:text="@string/login_button"
            android:fontFamily="@font/irishgrover_regular"
            android:textAllCaps="false"
            android:textSize="24sp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/signup_btn_initial"
            android:layout_width="250dp"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            android:backgroundTint="@color/forest_green"
            android:text="@string/signup_button"
            android:fontFamily="@font/irishgrover_regular"
            android:textAllCaps="false"
            android:textSize="24sp" />
    </LinearLayout>


</ScrollView>